--- a/Dvdstore/WebContent/dvdStyle.css
+++ b/Dvdstore/WebContent/dvdStyle.css
@@ -258,6 +258,15 @@ h1#logo a {
 
 #content {
 }
+input {
+    border: 1px solid black;
+    border-radius: 3px;
+    -webkit-transition: box-shadow .3s;
+    transition: box-shadow .3s;
+}
+input:focus {
+    box-shadow: 0px 0px 10px #00ff00;
+}
 .box {
 	width:1000px;	
 	padding-bottom:21px;
